deliverables and such

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ ul {
 
 .subtleText {
   color: #D1D1D1;
-  font-size: .75em; 
+  font-size: .75em;
 }
 
 
@@ -137,4 +137,32 @@ ul {
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+/* .hogcard{
+  position: relative;
+  padding: 30% 0;
+} */
+
+.hoginfo {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+	font-size: 20px;
+}
+
+.hogpic {
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.semi-transparent {
+  opacity: 25%
 }
